# HEAR_Architecture

./: CMakeLists.txt
include/HEAR_actuation/: EscCalib.hpp
include/HEAR_core/: common_types.hpp
include/HEAR_math/: AvgFilter.hpp  ButterFilter_2nd.hpp  FbLinearizer.hpp  HoldVal.hpp  KalmanFilter.hpp  Ramp.hpp  feedbacklinearization.hpp  polyfit.hpp
include/HEAR_mission/: CallHeartbeat.hpp  ConstantUpdate.hpp  SendBoolSignal.hpp
src/: AvgFilter.cpp  ButterFilter_2nd.cpp  CallHeartbeat.cpp  ConstantUpdate.cpp  EscCalib.cpp  FbLinearizer.cpp  Global2Inertial.cpp  HoldVal.cpp  PolyFilter.cpp  Ramp.cpp  RotationMatrix3by3.cpp  SendBoolSignal.cpp  Sum.cpp
